# TRPG2026_1

./: .env.example  .gitignore  AI_Living_World_design_v1.0.md  README.md  character_format_v1.0.md  claude_plan.md  commit.md  pyproject.toml  vercel.json
.github/workflows/: deploy-dashboard.yml
app/: __init__.py  config.py  logging_setup.py  run.py  single_instance.py
app/ai/: __init__.py  guard.py  orchestrator.py  prompts.py  schemas.py
app/content/: __init__.py  affordances.py  characters.py  currency.py  director.py  items.py  monsters.py  (+2 more)
drafts/: architecture-comparison.md  dawnbridge.scenario.yaml  inventory-collision-map.md
portal/: app.js  config.js  index.html  style.css
scripts/: build_pages.py  intent_ab_test.py  smoke.py  start_cloudflare_connector.ps1  start_cloudflare_tunnel.ps1
static/: style.css
tests/: conftest.py  test_affordances.py  test_ai.py  test_assist_opposed.py  test_bands_costs.py  test_campaigns.py  test_clarification.py  test_combat.py  test_conditions.py  test_config.py  test_creative_resolver.py  test_currency.py  test_db.py  test_dice.py  test_director.py  test_discord_campaign_scope.py  test_entities.py  test_guard.py  test_guild_rank.py  test_implausible_gate.py  test_integration.py  test_intent_literal.py  test_inventory.py  test_location_registration.py  test_logging_setup.py  test_mention_tally.py  test_movement.py  test_npc_reflection.py  test_pc_exclusion.py  test_progression.py  test_quests.py  test_resolution.py  test_rules.py  test_travel_location.py  test_web.py  test_world_graph.py  test_world_state.py
(+50 files in other folders)
